--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-#we use java
 language: java
-
-#we add the java development kit (jdk)
 jdk:
-- openjdk8
+  - openjdk8
+script:
+  - ./mvnw clean install
