--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,8 @@ language: java
 jdk:
  - oraclejdk8
 
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
 dist: trusty
