adding lines to Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,9 @@ install:
 - mvn -N io.takari:maven:wrapper
 - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
+deploy:
+  provider: heroku
+  api_key:
+    secure: "6d5e7847-256e-4251-aa04-68851678823d"
+
 dist: trusty
