adding other heroku config to Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,9 @@ deploy:
   api_key:
     secure: "6d5e7847-256e-4251-aa04-68851678823d"
   app: helloworld-v
+  on:
+    branches:
+        only:
+          - master
 
 dist: trusty
