--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ install:
 
 deploy:
   provider: heroku
-  api_key:
-    secure: "6d5e7847-256e-4251-aa04-68851678823d"
+  api_key: "6d5e7847-256e-4251-aa04-68851678823d"
   app: helloworld-v
   on:
     repo: sighaloic/INGE-4-ISJ-2021-Groupe-5-Integration-Continue	
