--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   app: helloworld-v
   on:
     repo: sighaloic/INGE-4-ISJ-2021-Groupe-5-Integration-Continue	
-    branch: main
+    branch: sighaloic
   skip_cleanup: true
 
 dist: trusty
