edited travis file to deploy on my own app only (helloworld-loic)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 deploy:
   provider: heroku
   api_key: "4d37acbc-6e96-4f0e-935f-4b50799f6739"
-  app: helloworld-v
+  app: helloworld-loic
   on:
     repo: sighaloic/INGE-4-ISJ-2021-Groupe-5-Integration-Continue	
     branch: sighaloic
