Build My first project Github - Travis - Heroku

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ install:
 
 deploy:
   provider: heroku
-  api_key: "4d37acbc-6e96-4f0e-935f-4b50799f6739"
-  app: helloworld-v
+  api_key: "85ea1535-d567-4d0a-b04b-3a3115bd0daa"
+  app: helloworld-sanzy
   on:
     repo: sighaloic/INGE-4-ISJ-2021-Groupe-5-Integration-Continue	
-    branch: sighaloic
+    branch: sanzy
   skip_cleanup: true
 
 dist: trusty
