--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-runner</artifactId>
-			<version>${junit-platform.version}</version>
+			<version>1.7.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
