--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ jdk:
 install:
 - mvn -N io.takari:maven:wrapper
 - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
+
+dist: trusty
